--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -66,10 +66,70 @@
 }
 .itemsListHome div img{
 display: flex;
-height: 27.5vh;
 
+width: 300px;
+  height: 200px;
 
 }
 .itemsListHome div p{
   margin: 0%;
 }
+.singleRestroInfo{
+
+  border: black 1px solid;
+  margin: auto;
+  width: 700px;
+  height: 150px;
+  border-radius: 1rem;
+  text-align: left;
+  
+}
+.singleRestroInfo span{
+  display: flex;
+  justify-content: left;
+  padding-left: 2rem;
+  
+}
+.singleRestroInfo h4{
+  padding-left: 2rem;
+  padding-top: 0%;
+  margin: 0;
+  
+}
+.restroDish{
+  border: 1px solid black;
+  margin: auto;
+  width: 650px;
+  height: 150px;
+  padding-left: 2rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  
+
+}
+.restroDish h3{
+  padding-top: 0%;
+  margin-top: 0%;
+}
+.restroDish img{
+  
+  width: 150px;
+  height: 150px;
+ position: absolute;
+ margin-left: 7rem;
+  
+}
+.restroDish span{
+  text-align: left;
+ 
+
+  
+}
+.restroDish span p{
+width: 60%;
+  margin: 0%;
+  overflow-wrap: break-word;
+
+
+}
+
